syntax = "proto3";

package bucketeer.feature;
option go_package = "github.com/bucketeer-io/bucketeer/v2/proto/feature";

message ScheduledChange {
  enum FieldType {
    UNSPECIFIED = 0;
    PREREQUISITES = 1;
    TARGETS = 2;
    RULES = 3;
    DEFAULT_STRATEGY = 4;
    OFF_VARIATION = 5;
    VARIATIONS = 6;
  }
  enum ChangeType {
    CHANGE_UNSPECIFIED = 0;
    CHANGE_CREATE = 1;
    CHANGE_UPDATE = 2;
    CHANGE_DELETE = 3;
  }
  string id = 1;
  ChangeType change_type = 2;
  FieldType field_type = 3;
  string field_value = 4;
}

message ScheduledFlagUpdate {
  string id = 1;
  string feature_id = 2;
  string environment_id = 3;
  int64 scheduled_at = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
  repeated ScheduledChange changes = 7;
}
